--- a/forms-documents.html
+++ b/forms-documents.html
@@ -242,11 +242,11 @@ mobile-theme: light
               %}
               {% include docs-table.html
                   part="row"
-                  link="src/documents/Outdoor Ethics Guide 2017.pdf"
+                  link="src/documents/Outdoor Ethics Guide Handbook 2018.pdf"
                   name="Outdoor Ethics Guide Handbook"
-                  date="01 Jan 2017"
+                  date="01 Jan 2018"
                   type="pdf"
-                  size="512 KB"
+                  size="384 KB"
               %}
             </table>
           </div>
