use current webpage url for Woodruff Packing List

--- a/forms-documents.html
+++ b/forms-documents.html
@@ -180,7 +180,7 @@ mobile-theme: light
               %}
               {% include docs-table.html
                   part="row"
-                  link="http://www.atlantabsa.org/get-ready/what-to-bring/57797"
+                  link="https://www.campwoodruff.org/what-to-bring"
                   name="Woodruff Summer Camp Packing List"
                   date="—"
                   type="url"
