add payments pages

--- a/payments.html
+++ b/payments.html
@@ -14,13 +14,12 @@ title: Payments
     <div class="flex-container content-strip content-strip--secondary">
       <div class="flex-item">
         <p>Trying to recharter? Pay on the recharter page — not here.</p>
-        <a href="./recharter.html" class="mdc-button mdc-button--outlined">Recharter page</a>
+        <a href="./recharter.html" class="mdc-button mdc-button--outlined" style="margin-top:0;">Recharter page</a>
       </div>
     </div>
     <div class="flex-container content-strip content-strip--no-bottom-padding">
       <div class="flex-item">
-        <h2>Venmo</h2>
-        <p>PREFERRED PAYMENT METHOD</p>
+        <h2>Venmo (Preferred)</h2>
         <p>You can make camping and high adventure payments using Venmo. Troop 370 prefers Venmo because merchant fees are waived for payments that don't use a credit card. You must make payments via the Venmo app. When paying, you must include SCOUT NAME and EVENT NAME with your payment in the 'What's it for?' section.</p>
         <p>To pay, download the app and add Troop-ThreeSeventy as a Venmo friend. Alternatively, you can click the button below to go to the Troop 370 Venmo page.</p>
         <p>Credit card payments will incur merchant fees.</p>
