--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@ mobile-theme: light
     <div class="container">
       <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "autoPlay": 4000, "freeScroll": true, "pageDots": false }'>
         {% include main-carousel-card.html
+            card-title="Snowbear Campout at Deep Gap, NC"
+            card-subtitle="May 4-5"
+            card-href="https://docs.google.com/forms/d/e/1FAIpQLScFeA6_hA1CL90yOF_Vq-d3LiMiu1iT5EAHXMyhuyeuunbtWw/viewform"
+            button-text="Sign up"
+            background-image="/src/banner images/generic camping - tent with light.jpg"
+        %}
+        {% include main-carousel-card.html
             card-title="Woodruff Summer Camp"
             card-subtitle="June 9-15"
             card-href="woodruff-sc-sign-up_encrypted.html"
