updates encrypted campout signup page for may

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ mobile-theme: light
         {% include main-carousel-card.html
             card-title="Snowbear Campout at Deep Gap, NC"
             card-subtitle="May 4-5"
-            card-href="https://docs.google.com/forms/d/e/1FAIpQLScFeA6_hA1CL90yOF_Vq-d3LiMiu1iT5EAHXMyhuyeuunbtWw/viewform"
+            card-href="campout-sign-up_encrypted.html"
             button-text="Sign up"
             background-image="/src/banner images/generic camping - tent with light.jpg"
         %}
