--- a/leadership-training.html
+++ b/leadership-training.html
@@ -2,7 +2,7 @@
 layout: default
 title: Leadership Training
 ---
-<div class="content-strip content-strip--primary">
+<div class="content-strip content-strip--primary content-strip--extra-padding content-strip--center">
   <div class="flex-item">
     <h1>Leadership Training</h1>
   </div>
