add extra padding to first content-strip on about page

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: default
 title: About
 ---
-<div class="flex-container content-strip content-strip--primary">
+<div class="flex-container content-strip content-strip--primary content-strip--extra-padding">
   <div class="flex-item">
     <h1>About Troop 370</h1>
     <p>Welcome to the Boy Scouts of America and Troop 370.</p>
