--- a/photos.html
+++ b/photos.html
@@ -2,4 +2,7 @@
 layout: default
 title: Photos
 ---
+<head>
+  <link rel="stylesheet" href="/css/main-dark.css">
+</head>
 {% include iframe.html src="https://troop370.smugmug.com/" %}
