--- a/index.html
+++ b/index.html
@@ -2,37 +2,92 @@
 layout: default
 title: Home
 ---
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Test page</title>
-    <link rel="stylesheet" href="/css/main.css">
-  </head>
-  <body class="mdc-typography">
-    <h1>Hello</h1>
-    <p>This is a test :)</p>
-    <button class="mdc-button mdc-button--raised">
-      <span class="mdc-button__label">Button</span>
-    </button>
-    <button class="mdc-button mdc-button--outlined">
-      <span class="mdc-button__label">Button</span>
-    </button>
-    <div class="mdc-card demo-card">
-      <div class="mdc-card__primary-action demo-card__primary-action" tabindex="0">
-        <div class="mdc-card__media mdc-card__media--16-9 demo-card__media" style="background-image: url(&quot;https://material-components.github.io/material-components-web-catalog/static/media/photos/3x2/2.jpg&quot;);"></div>
-        <div class="demo-card__primary">
-          <h2 class="demo-card__title mdc-typography mdc-typography--headline6">Our Changing Planet</h2>
-          <h3 class="demo-card__subtitle mdc-typography mdc-typography--subtitle2">by Kurt Wagner</h3>
-        </div>
-        <div class="demo-card__secondary mdc-typography mdc-typography--body2">Visit ten places on our planet that are undergoing the biggest changes today.</div>
-      </div>
-      <div class="mdc-card__actions">
-        <div class="mdc-card__action-buttons">
-          <button class="mdc-button mdc-card__action mdc-card__action--button mdc-button--unelevated">Read</button>
-          <button class="mdc-button mdc-card__action mdc-card__action--button mdc-button--unelevated">Bookmark</button>
-        </div>
+<style media="screen">
+  .topnav .flex-item {
+    width: 1600px;
+  }
+</style>
+<link rel="stylesheet" href="./css/page/index.css">
+<script src="/js/flickity.pkgd.min.js"></script>
+<div class="index-container">
+  <div class="top-container">
+    <div class="content-strip content-strip--center" id="image-banner">
+      <div class="flex-item">
+        <h1>Welcome to Troop 370</h1>
+        <p>Troop 370 is proud to have completed over 40 years of consecutive service to the Buckhead\Brookhaven community. Sponsored by St. James United Methodist Church, Troop 370 has a long history of developing boys into young men following the aims and ideals of the Boy Scouts of America movement.</p>
+        <a href="about.html" class="mdc-button mdc-button--outlined">About page</a>
       </div>
     </div>
-  </body>
-</html>
+  </div>
+  <carousel class="content-strip" id="main-carousel">
+    <div class="flex-item">
+      <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "autoPlay": 4000, "freeScroll": true, "pageDots": false }'>
+        {% include main-carousel-card.html
+            card-title="Woodruff Summer Camp"
+            card-subtitle="June 9-15"
+            card-href="woodruff-sc-sign-up_encrypted.html"
+            button-text="Sign up"
+            background-image="/src/carousel-images/wsr-sign-far.jpg"
+        %}
+        {% include main-carousel-card.html
+            card-title="Summit Summer Camp"
+            card-subtitle="June 23-29"
+            card-href="summit-sc-sign-up_encrypted.html"
+            button-text="Sign up"
+            background-image="/src/carousel-images/summit-sign.webp"
+        %}
+        {% include main-carousel-card.html
+            card-title="High Adventure"
+            card-subtitle="2019"
+            card-href="camps-adventure.html"
+            button-text="View list"
+            background-image="/src/carousel-images/scout shadow on top of mountain with sunset.jpg"
+        %}
+      </div>
+    </div>
+  </carousel>
+  <div class="content-strip content-strip--extra-padding content-strip--center" id="time-banner">
+    <div class="flex-item">
+      <h2 class="mdc-typography--headline4">Weekly Meetings</h2>
+      <p>Wednesday Nights<br>7:30 PM - 9:00 PM<br>4400 Peachtree Dunwoody Rd, Atlanta, GA 30342<br>Activities Building (Loridans Drive Entrance)</p>
+    </div>
+  </div>
+  <carousel class="content-strip" id="img-carousel">
+    <div class="flex-item">
+      <div class="img-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "autoPlay": 4000, "lazyLoad": 3, "imagesLoaded": true }'>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/1.jpg" alt="Preparing to hike at Okpik"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/2.jpg" alt="Sitting on a tree"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/3.jpg" alt="Whitewater rafting on the Nantahala River"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/4.jpg" alt="A group of first-year scouts at Woodruff Scout Reservation during sumer camp"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/5.jpg" alt="Running around at the S-Games campout"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/6.jpg" alt="Scuba diving"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/7.jpg" alt="Group picture of Troop 370 scouts that attended the National Scout Jamboree in 2017"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/8.jpg" alt="Mountain biking"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/9.jpg" alt="Costumes for the cracker barrel at summer camp"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/10.jpg" alt="Group of scouts at a waterfall"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/11.jpg" alt="Scouts huddled together to avoid the cold wind on the short boat trip to Dog Island"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/12.jpg" alt="Sharing the peacelight"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/13.jpg" alt="Orienteering in the snow"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/14.jpg" alt="Lunch break at a service project to refurbish the front area of High Point Episcopal Community Church"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/15.jpg" alt="Removing English Ivy from the playground at High Point Episcopal Community Church"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/16.jpg" alt="Canoeing at Norther Tier High Adventure Base"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/17.jpg" alt="Northern Tier Crew - 2017"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/18.jpg" alt="Whitewater rafting on the Nantahala River"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/19.jpg" alt="Playing Ga-Ga at Woodruff"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/20.jpg" alt="Campfire stories"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/21.jpg" alt="Learning how to take care of a car at Automotive Maintenance merit badge"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/22.jpg" alt="Getting equipment for Northern Tier"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/23.jpg" alt="Working at the Pine Straw Sale"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/24.jpg" alt="Snow Bear primitive skills campout"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/25.jpg" alt="Preparing to cook at the Scout Weekend campout"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/26.jpg" alt="Sitting at the top of a mountain in Georgia"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/27.jpg" alt="Climbing on an old tree at Dog Island"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/28.jpg" alt="Lined up for the morning flag ceremony at Woodruff Summer Camp"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/29.jpg" alt="Eating chicken and dumplings for dinner"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/30.jpg" alt="Attempting to start a fire by friction"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/31.jpg" alt="Dinner on a campout"></div>
+        <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/32.jpg" alt="Rock climbing"></div>
+      </div>
+    </div>
+  </carousel>
+</div>
