use correct link for REI backpack guide

--- a/helpful-links.html
+++ b/helpful-links.html
@@ -2,15 +2,12 @@
 layout: default
 title: Helpful Links
 ---
-
 <div class="content-strip content-strip--primary content-strip--extra-padding content-strip--center">
   <div class="flex-item">
     <h1>Helpful Links</h1>
     <p>Use the resources below to learn more about the the Boy Scouts of America and the Atlanta Area Council and access useful training documents and videos. Access additional information and forms on out Forms &amp; Documents page.</p>
   </div>
 </div>
-
-
 <div class="content-strip content-strip--min-padding">
   <div class="flex-item">
     <div class="col-1">
@@ -44,11 +41,11 @@ title: Helpful Links
           <a href="https://filestore.scouting.org/filestore/pdf/33066/33066_Scouts_BSA_Insignia_WEB.pdf" class="mdc-button">Read guide</a>
         </div>
       </div>
-      <div class="flex-container content-strip content-strip--reduced-padding">
+      <div class="flex-container content-strip content-strip--reduced-padding content-strip--no-bottom-padding">
         <div class="flex-item">
           <h2>REI Guide: How to Pack and Hoist a Backpack (video)</h2>
           <p>This article offers packing tips and explains the proper way to hoist your pack when it’s full.</p>
-          <a href="https://filestore.scouting.org/filestore/pdf/33066/33066_Scouts_BSA_Insignia_WEB.pdf" class="mdc-button">Read guide</a>
+          <a href="https://www.rei.com/learn/expert-advice/loading-backpack.html" class="mdc-button">Read guide</a>
         </div>
       </div>
     </div>
