Remove _encrypted from file names

--- a/advancement.html
+++ b/advancement.html
@@ -15,7 +15,7 @@ title: Advancement
         <div class="flex-item">
           <h2>Merit Badge Couselors</h2>
           <p>A list of merit badge counselors and their contact information can be found in the password protected members section of our site.</p>
-          <a href="/mb-counselors_encrypted" class="mdc-button">Merit badge counselors page</a>
+          <a href="/mb-counselors" class="mdc-button">Merit badge counselors page</a>
         </div>
       </div>
       <div class="flex-container content-strip content-strip--no-bottom-padding">
