--- a/campout-schedule-local-events.html
+++ b/campout-schedule-local-events.html
@@ -12,7 +12,7 @@ title: Campout Schedule &amp; Local Events
   <div class="flex-item">
     <h2>Monthy Campout Schedule</h2>
     <p>Troop 370 schedules monthly campouts throughout the “camping year”, together with Winter Camp and Summer Camp. Find links to campout signup forms on the Troop's Google Calendar or Facebook page. On the calendar, click on the campout/event to see details about signing up; in order to view additional details and links about the campout, you can also click "more details" after the campout window opens within the calendar.</p>
-    <a href="/calendar_encrypted" class="mdc-button">View Troop 370 Google Calendar</a>
+    <a href="/calendar" class="mdc-button">View Troop 370 Google Calendar</a>
   </div>
 </div>
 <div class="content-strip content-strip--no-bottom-padding">
