--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@ title: Home
         {% include main-carousel-card.html
             card-title="Woodruff Summer Camp"
             card-subtitle="June 9-15"
-            card-href="woodruff-sc-sign-up_encrypted.html"
+            card-href="woodruff-sc-sign-up.html"
             button-text="Sign up"
             background-image="/src/carousel-images/wsr-sign-far.jpg"
         %}
         {% include main-carousel-card.html
             card-title="Summit Summer Camp"
             card-subtitle="June 23-29"
-            card-href="summit-sc-sign-up_encrypted.html"
+            card-href="summit-sc-sign-up.html"
             button-text="Sign up"
             background-image="/src/carousel-images/summit-sign.webp"
         %}
