--- a/payments.html
+++ b/payments.html
@@ -46,6 +46,6 @@ title: Payments
     <h2>Cash, Check, or Money Order</h2>
     <p>Hand-deliver these payment types to the Trip Captain or the Scoutmaster, preferably at the weekly Wednesday meetings. The current Trip Captain is listed on the sign-up form for the monthly campout.</p>
     <a href="./index.html#meeting-details" class="mdc-button mdc-button--outlined">Meeting details</a>
-    <a href="./campout-sign-up_encrypted.html" class="mdc-button mdc-button--outlined">Campout sign-up</a>
+    <a href="./campout-sign-up.html" class="mdc-button mdc-button--outlined">Campout sign-up</a>
   </div>
 </div>
