add .html file extension to files missing it

--- a/contact-webmaster.html
+++ b/contact-webmaster.html
@@ -5,7 +5,7 @@ title: Contact Webmaster
 <div class="content-strip content-strip--primary content-strip--extra-padding content-strip--center">
   <div class="flex-item">
     <h1>Contact Webmaster</h1>
-    <p>Use the contact form below to get in contact with a Troop 370 Webmaster. We do our best to respond quickly to requests for passwords or website assistance. For general questions and contact, use our <a href="/contact">general contact form</a>.</p>
+    <p>Use the contact form below to get in contact with a Troop 370 Webmaster. We do our best to respond quickly to requests for passwords or website assistance. For general questions and contact, use our <a href="/contact.html">general contact form</a>.</p>
   </div>
 </div>
 <div class="content-strip content-strip--reduced-padding">
