--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@ title: Contact
 <div class="content-strip content-strip--primary content-strip--extra-padding content-strip--center">
   <div class="flex-item">
     <h1>Contact Troop 370</h1>
-    <p>Use the contact form below to get in contact with a representative from Troop 370. We do our best to respond quickly to any questions you may have. If you are having issues with the website or need the password, <a href="/contact-webmaster">contact a webmaster</a>.</p>
+    <p>Use the contact form below to get in contact with a representative from Troop 370. We do our best to respond quickly to any questions you may have. If you are having issues with the website or need the password, <a href="/contact-webmaster.html">contact a webmaster</a>.</p>
   </div>
 </div>
 <div class="content-strip">
