--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ title: About
     <h1>About Troop 370</h1>
     <p>Welcome to the Boy Scouts of America and Troop 370.</p>
     <p>Troop 370 meets each Wednesday night at 7:30 pm in the Activities Building at St. James UMC. Troop 370 currently has over 100 registered Scouts in the Troop.</p>
-    <p>Troop 370 is a very active Troop. <a href="/campout-schedule-local-events">Click here to view a list of our activities</a>.</p>
+    <p>Troop 370 is a very active Troop. <a href="/campout-schedule-local-events.html">Click here to view a list of our activities</a>.</p>
     <p>By becoming a parent of a Scout you are starting your son out on the great adventure of scouting. This is an important and rewarding endeavor that you will share with him.</p>
     <p>Our sponsor, or Chartered Organization, is St. James United Methodist Church. Troop 370 is non-denominational and welcomes all boys ages 11 to 18 to Scouting. A boy needs no prior experience to become a Scout. Troop 370 has five main goals for our Scouts:
       <br> • Growth in moral strength and character
