--- a/camps-adventure.html
+++ b/camps-adventure.html
@@ -5,7 +5,7 @@ title: Camps/High Adventure
 <div class="content-strip content-strip--primary content-strip--extra-padding content-strip--center">
   <div class="flex-item">
     <h1>Camps/High Adventure</h1>
-    <p>This page provides information about summer/winter camps, high adventure camps, and other special trips.  Registration, dates and other information can be found in either the event descriptions below or via the <a href="/calendar">troop calendar</a>. Information about the Troop's regular overnight trips can be found on the <a href="/calendar">troop calendar</a> or on the <a href="/campout-schedule-local-events">campout schedule page</a>.</p>
+    <p>This page provides information about summer/winter camps, high adventure camps, and other special trips.  Registration, dates and other information can be found in either the event descriptions below or via the <a href="/calendar.html">troop calendar</a>. Information about the Troop's regular overnight trips can be found on the <a href="/calendar.html">troop calendar</a> or on the <a href="/campout-schedule-local-events.html">campout schedule page</a>.</p>
   </div>
 </div>
 <div class="content-strip content-strip--secondary">
@@ -18,7 +18,7 @@ title: Camps/High Adventure
     <h3 class="mdc-typography--headline5">Summer Camp at Woodruff Scout Reservation</h3>
     <p>June 9 - 15, 2019</p>
     <p>When the Atlanta Area Council talks about “the summer of a lifetime,” they’re not just talking about a fun week with your best friends. This is where thousands of Scouts come together for life-changing, memory-making, adventure-taking awesomeness that will impact your life forever. Troop 370 regularly brings 65-75 Scouts to Woodruff.</p>
-    <a href="/woodruff-sc-sign-up" class="mdc-button">Sign up for Woodruff</a>
+    <a href="/woodruff-sc-sign-up.html" class="mdc-button">Sign up for Woodruff</a>
   </div>
 </div>
 <div class="content-strip content-strip--no-bottom-padding">
@@ -26,7 +26,7 @@ title: Camps/High Adventure
     <h3 class="mdc-typography--headline5">Summer Camp at Summit Bechtel Reserve</h3>
     <p>June 23 - 29, 2019</p>
     <p>Troop 370 will again have a second summer camp at the Summit Bechtel Reserve in West Virginia. This will be a different summer camp experience from our primary summer camp at Woodruff Scout Reservation. Morning and afternoon activities focus on skill development or advancement activities like skateboarding, rock climbing, archery, kayaking, ecology/conservation, Project COPE, Outdoor Skills, mountain biking or wilderness survival. Evening programs are centered around special events, competitions, or open programs.</p>
-    <a href="/summit-sc-sign-up" class="mdc-button">Sign up for Summit</a>
+    <a href="/summit-sc-sign-up.html" class="mdc-button">Sign up for Summit</a>
   </div>
 </div>
 <div class="content-strip content-strip--no-bottom-padding">
@@ -68,7 +68,7 @@ title: Camps/High Adventure
     <h3 class="mdc-typography--headline5">Philmont Scout Ranch at Cimarron, NM</h3>
     <p>June 27 - July 10, 2020</p>
     <p>Philmont offers 140,177 acres of rugged mountain wilderness in the Rocky Mountains in northeastern New Mexico. In addition to providing an unforgettable adventure in backpacking across miles of rugged, rocky trails, Philmont Scout Ranch offers programs that feature the best of the Old West—horseback riding, burro packing, gold panning, chuckwagon dinners, and interpretive history—with exciting challenges for today such as rock climbing, mountain biking, and sport shooting. It’s an unbeatable recipe for fast-paced fun in the outdoors.</p>
-    <a href="/high-adventure-2020-sign-up" class="mdc-button">Sign up for Philmont</a>
+    <a href="/high-adventure-2020-sign-up.html" class="mdc-button">Sign up for Philmont</a>
   </div>
 </div>
 <div class="content-strip content-strip--no-bottom-padding">
@@ -76,7 +76,7 @@ title: Camps/High Adventure
     <h3 class="mdc-typography--headline5">New River Trek at Summit Bechtel Reserve, WV</h3>
     <p>June 4 - 11, 2020</p>
     <p>This is a 50-mile paddle trek on the New River. You will navigate the upper portion of the river in inflatable kayaks (one or two-man) called “duckies”. This portion of the river includes Class I to III rapids. The final whitewater day in the Lower Canyon is a rafting experience and includes Class III to V rapids. Crews camp along the river through the New River Gorge. Summit Bechtel Reserve requires all participants to be 14 years old by the first day of the trek.</p>
-    <a href="/high-adventure-2020-sign-up" class="mdc-button">Sign up for New River Trek</a>
+    <a href="/high-adventure-2020-sign-up.html" class="mdc-button">Sign up for New River Trek</a>
   </div>
 </div>
 <div class="content-strip">
@@ -84,6 +84,6 @@ title: Camps/High Adventure
     <h3 class="mdc-typography--headline5">Northern Tier National High Adventure Base at Atikokan, Ontario</h3>
     <p>July 23 - August 2, 2020</p>
     <p>Explore millions of acres of pristine lakes, meandering rivers, dense forests and wetlands in Northwest Ontario on a nine day canoeing adventure in Quetico Provential Park. North America’s Canoe Country, a vast series of navigable lakes and rivers spanning thousands of square miles, is one of the last great wildernesses on the continent.</p>
-    <a href="/high-adventure-2020-sign-up" class="mdc-button">Sign up for Northern Tier</a>
+    <a href="/high-adventure-2020-sign-up.html" class="mdc-button">Sign up for Northern Tier</a>
   </div>
 </div>
