ignore image carousel with html proofer becuase images do not use src

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ title: Home
       <p>Wednesday Nights<br>7:30 PM - 9:00 PM<br>4400 Peachtree Dunwoody Rd, Atlanta, GA 30342<br>Activities Building (Loridans Drive Entrance)</p>
     </div>
   </div>
-  <carousel class="content-strip" id="img-carousel">
+  <carousel class="content-strip" id="img-carousel" data-proofer-ignore>
     <div class="flex-item">
       <div class="img-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "autoPlay": 4000, "lazyLoad": 3, "imagesLoaded": true }'>
         <div class="carousel-cell "><img class="carousel-image" data-flickity-lazyload="src/photos-index-slideshow/1.jpg" alt="Preparing to hike at Okpik"></div>
