fix mispelled word "scouter"

--- a/participation.html
+++ b/participation.html
@@ -18,7 +18,7 @@ title: Scout/Parent Participation
 </div>
 <div class="content-strip">
   <div class="flex-item">
-    <h2 class="mdc-typography--headline5">Souter Participation (Adults)</h2>
+    <h2 class="mdc-typography--headline5">Scouter Participation (Adults)</h2>
     <p>For parents, there are many ways in which you can assist through volunteer efforts. There is no greater joy than joining your Scout through their Troop 370 experience and working to support the Troop behind the scenes.  If you would like to see how you can help, please contact the Troop, attend a meeting, or check out the "What Can I Do?" link in the password protected members section of the site.  Meetings are held most Wednesday evenings from 7:30 PM - 9:00 PM in the St. James UMC activities building.</p>
     <p>Using the drop-down menu under "Scout/Parent Info" above, you will find forms, helpful information, and other common documents that you will find helpful during your journey through Scouts at Troop 370.</p>
     <p>If you have any questions, ask them at a meeting or you may contact the troop with our <a href="contact.html">contact form</a>.</p>
